# LinaVG

./: .gitignore  CMakeLists.txt  README.md  devcontainer.json
.devcontainer/: devcontainer.json
Examples/: CMakeLists.txt
Examples/src/: DemoScreens.cpp  Main.cpp
_Dependencies/glad/: CMakeLists.txt
_Dependencies/glad/include/glad/: glad.h
_Dependencies/glad/src/: glad.c
include/Core/: Common.hpp
src/Core/: Drawer.cpp  Math.cpp  Renderer.cpp
